// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<ToolStatsDisplay /> > should display stats for a single tool correctly 1`] = `
"╭────────────────────────────────────────────────────────────────────────────────╮
│                                                                                │
│  Tool Stats For Nerds                                                          │
│                                                                                │
│  Tool Name                CallsSuccess Rate    Avg Time    Response            │
│                                                            Size                │
│  ────────────────────────────────────────────────────────────────────────────  │
│  test-tool                    1      100.0%       100ms        1.2K            │
│                                                                                │
│  User Decision Summary                                                         │
│  Total Reviewed Suggestions:                                      1            │
│   » Accepted:                                                     1            │
│   » Rejected:                                                     0            │
│   » Modified:                                                     0            │
│  ────────────────────────────────────────────────────────────────────────────  │
│   Overall Acceptance Rate:                                   100.0%            │
│                                                                                │
╰────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<ToolStatsDisplay /> > should display stats for multiple tools correctly 1`] = `
"╭────────────────────────────────────────────────────────────────────────────────╮
│                                                                                │
│  Tool Stats For Nerds                                                          │
│                                                                                │
│  Tool Name                CallsSuccess Rate    Avg Time    Response            │
│                                                            Size                │
│  ────────────────────────────────────────────────────────────────────────────  │
│  tool-a                       2       50.0%       100ms        2.5K            │
│  tool-b                       1      100.0%       100ms         800            │
│                                                                                │
│  User Decision Summary                                                         │
│  Total Reviewed Suggestions:                                      3            │
│   » Accepted:                                                     1            │
│   » Rejected:                                                     1            │
│   » Modified:                                                     1            │
│  ────────────────────────────────────────────────────────────────────────────  │
│   Overall Acceptance Rate:                                    33.3%            │
│                                                                                │
╰────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<ToolStatsDisplay /> > should handle large values without wrapping or overlapping 1`] = `
"╭────────────────────────────────────────────────────────────────────────────────╮
│                                                                                │
│  Tool Stats For Nerds                                                          │
│                                                                                │
│  Tool Name                CallsSuccess Rate    Avg Time    Response            │
│                                                            Size                │
│  ────────────────────────────────────────────────────────────────────────────  │
│  long-named-tool-for-te99999999       88.9%         1ms        5.0M            │
│  sting-wrapping-and-suc9                                                       │
│  h                                                                             │
│                                                                                │
│  User Decision Summary                                                         │
│  Total Reviewed Suggestions:                              222234566            │
│   » Accepted:                                             123456789            │
│   » Rejected:                                              98765432            │
│   » Modified:                                                 12345            │
│  ────────────────────────────────────────────────────────────────────────────  │
│   Overall Acceptance Rate:                                    55.6%            │
│                                                                                │
╰────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<ToolStatsDisplay /> > should handle zero decisions gracefully 1`] = `
"╭────────────────────────────────────────────────────────────────────────────────╮
│                                                                                │
│  Tool Stats For Nerds                                                          │
│                                                                                │
│  Tool Name                CallsSuccess Rate    Avg Time    Response            │
│                                                            Size                │
│  ────────────────────────────────────────────────────────────────────────────  │
│  test-tool                    1      100.0%       100ms         500            │
│                                                                                │
│  User Decision Summary                                                         │
│  Total Reviewed Suggestions:                                      0            │
│   » Accepted:                                                     0            │
│   » Rejected:                                                     0            │
│   » Modified:                                                     0            │
│  ────────────────────────────────────────────────────────────────────────────  │
│   Overall Acceptance Rate:                                       --            │
│                                                                                │
╰────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`<ToolStatsDisplay /> > should render "no tool calls" message when there are no active tools 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  No tool calls have been made in this session yet.                                               │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;
